Update performance documentation and add benchmark harness details